# valenix

./: .env.example  .gitignore  API_SPEC.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  REQUIREMENTS.md  docker-compose.yml
apps/web/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/app/chat/[conversationId]/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/app/waitlist/: page.tsx
apps/web/src/components/auth/: AuthForm.tsx
apps/web/src/components/brand/: ValenixLogo.tsx
apps/web/src/components/chat/: ChatLayout.tsx  ChatWindow.tsx
apps/web/src/components/waitlist/: WaitlistPanel.tsx
apps/web/src/lib/: api-client.ts  config.ts  streaming.ts  use-auth.ts
apps/web/src/types/: api.ts
services/api/: Dockerfile  pyproject.toml
services/api/app/: main.py
services/api/app/api/: deps.py
services/api/app/api/routes/: auth.py  chat.py  conversations.py  health.py
services/api/app/core/: config.py  redis.py  security.py
services/api/app/db/: session.py
services/api/app/db/models/: __init__.py  conversation.py  message.py  oauth_account.py  password_credential.py  user.py
services/api/app/schemas/: auth.py  chat.py  conversation.py
services/api/app/services/: auth_service.py  chat_service.py  conversation_service.py
