[project]
name = "valenix-api"
version = "0.1.0"
description = "Valenix MVP FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29.0",
  "bcrypt>=4.0.1,<4.1.0",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "passlib[bcrypt]>=1.7.4",
  "pydantic-settings>=2.3.0",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.0.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "uvicorn[standard]>=0.30.0"
]

[tool.ruff]
line-length = 100
